book-css: Ensure images are never inverted even in dark mode.

--- a/shared/css/bookstyle.css
+++ b/shared/css/bookstyle.css
@@ -9,6 +9,7 @@ img.nav:hover {
 }
 .tex-image {
 		filter: drop-shadow(7px 7px 4px rgba(0, 0, 0, .7));
+		filter: invert(0) !important;
 		max-width: 90%;
 }
 *,*:focus,*:hover{
